--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html lang="PL-pl">
 <head>
 	<meta charset="UTF-8">
-	<title>Test</title>
-	<script src="https://code.jquery.com/jquery-3.6.3.slim.js" integrity="sha256-DKU1CmJ8kBuEwumaLuh9Tl/6ZB6jzGOBV/5YpNE2BWc=" crossorigin="anonymous"></script>
+	<title>Test GitHub</title>
 </head>
 <body>
-	<script>$("#testLoad").load("https://www.diki.pl/slownik-angielskiego?q=glaring");</script>
-	<div id="testLoad"></div>
+	<div id="main">
+		<h1 id="naglowek">Testuję JS</h1>
+	</div>
+	
+	<script>
+		var wynik = "JS działa!"
+		document.getElementById('naglowek').innerText = wynik;
+	</script>
 </body>
 </html>
